Changelog for GoodNews

- fixed a bug in resource rendering (this was a tricky one!)


GoodNews 1.3.4-pl (2014-12-03)
--------------------------------------------------
- fixed a problem where Resource Collections aren't restored correctly from database
- added container filter dropdown in Resource Collections grid (better user experience)
- removed grouping by container in Resource Collections grid
- added PHP 5.3 (or later) requirement to readme.txt
- again fixed another small bug in how cron security keys are checked :)
- fixed a problem where Resource Collections are empty on first load (no Collections array available in mailing_meta)


GoodNews 1.3.3-pl (2014-11-16)
--------------------------------------------------
- fixed an issue with checkboxes causing text-parsing problems when using the "required" validator
- [#5] Render warning message to GoodNews forms if Snippets are mis-configured
- fixed a few PHP warnings in goodnewssubscriptioncontroller.class.php
- when updating the subscription profile: update form fields with new values when reloadOnSuccess = false
- [#29] Frontend: groups checkboxes output is falsely rendered inside html form fieldset for each single group
- [#28] Frontend: Subscription snippet - crashes during validation if email field is empty
- improved username creation in Subscriber Importer (we now use the userid part of the email address)


GoodNews 1.3.2-pl (2014-11-01)
--------------------------------------------------
- [#27] Subscriber meta data not created for existing MODX users when using the "Import Update Feature"
- [#26] Editing a GoodNews Container - mailing templates category dropdown doesn't list all Categories
- small lexicon adjustments to better match MODX 2.3


GoodNews 1.3.1-pl (2014-10-28)
--------------------------------------------------
- [#25] Extend Subscriber Importer to enable "Update" of existing subscribers
- fixed a bug in Import console window (console window is now destroyed after closing)