@@ -39,10 +39,14 @@ GoodNews.panel.AboutSettings = function(config) {
         '        <td>'+((GoodNews.config.imapExtension) ? '<span class="gon-ok">'+_('yes')+'</span>' : '<span class="gon-nok">'+_('no'))+'</span></td>',
         '    </tr>',
         '    <tr class="gon-odd">',
+        '        <td>'+_('goodnews.php_version_required')+(GoodNews.config.requiredPhpVersion)+'</td>',
+        '        <td>'+((GoodNews.config.phpVersionOK) ? '<span class="gon-ok">'+(GoodNews.config.actualPhpVersion)+'</span>' : '<span class="gon-nok">'+(GoodNews.config.actualPhpVersion))+'</span></td>',
+        '    </tr>',
+        '    <tr class="gon-even">',
         '        <td>'+_('goodnews.site_status')+'</td>',
         '        <td>'+((GoodNews.config.siteStatus) ? '<span class="gon-ok">'+_('yes')+'</span>' : '<span class="gon-nok">'+_('no'))+'</span></td>',
         '    </tr>',
-        '    <tr class="gon-even">',
+        '    <tr class="gon-odd">',
         '        <td>'+_('goodnews.debug_mode')+'</td>',
         '        <td>'+((GoodNews.config.debug) ? '<span class="gon-nok">'+_('goodnews.activated')+'</span>' : '<span class="gon-ok">'+_('goodnews.deactivated'))+'</span></td>',
         '    </tr>',
