@@ -1,5 +1,6 @@
 Changelog for GoodNews
 
+- [#30] added indicator in GoodNews - System Checks for requirement of PHP versions > 5.3.0
 - fixed a bug in resource rendering (this was a tricky one!)
 
 
